...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bmrView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_accent"
        android:clickable="true"
        android:focusable="true"
...
        android:onClick="bmiOnClick"
        android:text="@string/BMI"
        android:textColor="@android:color/white"
        android:textSize="75sp" />

    <LinearLayout
        android:id="@+id/chooseUserLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@drawable/selector_primary_flipped"
        android:onClick="userOnClick"
        android:orientation="horizontal">
...
